test/classes/generic/varOverBadGeneric.good
varOverBadGeneric.chpl:6: error: Cannot default-initialize a variable with generic type
varOverBadGeneric.chpl:6: note: 'myC' has generic type 'C'
